v1.14.1-snapshot
===========
Bug fixes:
- #7016 Fix script that generates version number
- #7006 Resolve code scanning issues
- #7012 Fix natural horizontal scrolling on Mac client
- #6997 Allow Windows to go to sleep depending on system preferences

Enhancements:
- #6998 Remove functionality related to the screen saver synchronisation
===========

v1.14.0-rc1
===========
Bug fixes:
- #6953 | #6961 The system does not update server name in Server configuration
- #6966 macOS 10.13 missing build number
- #6968 System loses synchronisation between settings and configuration
- #6972 Fix SonarCloud security hotspots
- #6971 Fix vulnerabilities from SonarCloud
- #6974 Fix macOS 10.13 application filess
- #6975 Fix server stop working
- #6976 Fix windows builds
- #6979 Manual config error in client mode
- #6983 Fix that mac client listens on ipv4 only
- #6989 Fix client tray language switcher reverts to EN
- #6993 Fix issues with prefences UI
- #6992 UI issues and use cases
- #7000 Additional UI tweaks
- #7005 Fix User is not able to connect to server using ipv6 without wrapping IP in square quotes
- #7009 Clipboard sharing doesn't work on Linux system
- #7010 Fix Ubuntu 16.04 pipeline in Azure
- #7011 Fix language synchronisation checkbox spelling
- #7013 Wrong connection pop up appears if the user connects using a domain name which is assigned to list of IP's
- #7014 Temporary disable language sync logic
- #7015 Fix Windows service not starting up after sleep

Enhancements:
- #6954 Move language selection to advanced section
- #6959 Update synergy UI. Setup wizard
- #6969 Update synergy UI. Validation for aliases.
- #6973 Update synergy UI. Main window
- #6977 Update synergy UI. Configure server
- #6978 Update synergy UI. Settings window
- #6981 | #6987 | #6988 | #6996 Update synergy UI. Setup client configuration
- #6984 Update synergy UI. Client error messages
- #6962 | #6965 Add macOS 10.13 builder